Fix sub-menu padding on smaller screens

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -434,6 +434,10 @@ div.unc-citation-modal {
   span.institution_name {
     font-size: 12px;
   }
+
+  .nav {
+    padding-left: 15px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
